--- a/client/src/components/LoginRegister/LoginRegister.css
+++ b/client/src/components/LoginRegister/LoginRegister.css
@@ -5,10 +5,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url('img/background.avif') no-repeat;
-  background-size: cover;
-  background-position: center;
-  
+  background-color: var(--primary-color);
 }
 .wrapper {
     position: relative;
