--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@ footer {
     box-sizing: border-box;
     width: 100%;
     bottom: 0;
-    padding: 20px;
+    padding: 10px 20px;
     color: white;
     text-align: center;
   }
