--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,11 +1,10 @@
 .header-top {
-  background-color: #f8f8f8;
-  padding-left: 50px;
-  font-size: 1rem;
-  color: #333;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  background-color: #f8f8f8;
+  padding-left: 30px;
+  font-size: 1rem;
+  color: #333;
   transition: all .2s;
 }
 
@@ -35,6 +34,7 @@
 }
 
 .header-all {
+  background-color: #fff;
   width: 100%;
   z-index: 2;
   position: fixed;
@@ -57,6 +57,18 @@
   margin: 0;
   font-size: 24px;
   color: #008ecc;
+}
+
+.mobile-menu-button {
+  display: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.mobile-menu.open {
+  display: flex;
+  z-index: 2;
 }
 
 .imgLogo {
@@ -144,65 +156,6 @@
 .f {
   position: absolute;
   transform: translate(-25px, 11px);
-}
-
-
-@media (max-width: 952px) {
-  .header-top {
-    display: none;
-  }
-
-  .header-top,
-  .header-main {
-    justify-content: center;
-  }
-
-  .header-all header {
-    background-color: #ffffff75;
-    backdrop-filter: blur(8px);
-  }
-
-  .checkbtn {
-    left: 0;
-    color: #008ecc;
-    display: contents;
-  }
-
-  .fa-bars {
-    padding-right: 15px;
-  }
-
-  .header-main {
-    left: 0;
-  }
-
-  .header-main h1 {
-    display: flex;
-    align-items: center;
-    width: 100%;
-  }
-
-  .search-input:focus {
-    border-width: 2px;
-    border-color: var(--primary-color);
-    width: 20rem;
-  }
-
-  .header-main .nav-toggle {
-    display: none;
-  }
-
-  header h2 {
-    font-size: 19px;
-  }
-
-  .fixed {
-    transform: none;
-  }
-
-  .body {
-    margin-top: 180px;
-  }
 }
 
 .user-icon {
@@ -336,3 +289,77 @@
   gap: 10px;
   font-weight: 500;
 }
+
+@media (max-width: 768px) {
+  .header-main{
+    gap: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
+  .mobile-menu{
+    flex-direction: column;
+    align-items: center;
+    top: 100%;
+    left: 0;
+    right: 0;
+    gap: 20px;
+    background-color: #fff;
+    position: absolute;
+  }
+
+  .mobile-menu-button{
+    display: block;
+    order: -1;
+  }
+
+  .tools-bar{
+    display: none;
+    gap: 10px;
+    padding-top: 0;
+    form{
+      order: -1;
+    }
+  }
+
+  .fixed {
+    transform: none;
+  }
+
+  .imgLogo img {
+    width: 140px;
+  }
+
+  .search-input {
+    width: 100%;
+    padding: 8px;
+  }
+
+  .user-bar {
+    justify-content: space-between;
+  }
+
+  .actions {
+    position: fixed;
+    top: 60px;
+    right: 20px;
+    width: 80%;
+  }
+}
+
+@media (max-width: 480px) {
+  .header-main {
+    gap: 5px;
+    align-items: center;
+  }
+
+  .fixed {
+    transform: none;
+  }
+
+  .user-icon, .cart-icon {
+    font-size: 0.9em;
+    padding: 5px;
+  }
+}
+
