--- a/client/src/components/ProductDescription/ProductDescription.css
+++ b/client/src/components/ProductDescription/ProductDescription.css
@@ -61,7 +61,7 @@
 
 .product-item {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 60px;
 
   img {
